logs/exceptions.log
 [Winston is Logging :  2022-03-12T09:37:03.766Z error: MongoParseError: Invalid scheme, expected connection string to start with "mongodb://" or "mongodb+srv://"
    at new ConnectionString (/Users/rachit/Desktop/Apps/node-base/node_modules/mongodb-connection-string-url/lib/index.js:85:19)
    at parseOptions (/Users/rachit/Desktop/Apps/node-base/node_modules/mongodb/lib/connection_string.js:217:17)
    at new MongoClient (/Users/rachit/Desktop/Apps/node-base/node_modules/mongodb/lib/mongo_client.js:62:63)
    at /Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/connection.js:784:16
    at new Promise (<anonymous>)
    at NativeConnection.Connection.openUri (/Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/connection.js:781:19)
    at /Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/index.js:340:10
    at /Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/helpers/promiseOrCallback.js:32:5
    at new Promise (<anonymous>)
    at promiseOrCallback (/Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/helpers/promiseOrCallback.js:31:10)
 [Winston is Logging :  2022-03-12T09:37:44.062Z error: MongoParseError: Invalid scheme, expected connection string to start with "mongodb://" or "mongodb+srv://"
    at new ConnectionString (/Users/rachit/Desktop/Apps/node-base/node_modules/mongodb-connection-string-url/lib/index.js:85:19)
    at parseOptions (/Users/rachit/Desktop/Apps/node-base/node_modules/mongodb/lib/connection_string.js:217:17)
    at new MongoClient (/Users/rachit/Desktop/Apps/node-base/node_modules/mongodb/lib/mongo_client.js:62:63)
    at /Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/connection.js:784:16
    at new Promise (<anonymous>)
    at NativeConnection.Connection.openUri (/Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/connection.js:781:19)
    at /Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/index.js:340:10
    at /Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/helpers/promiseOrCallback.js:32:5
    at new Promise (<anonymous>)
    at promiseOrCallback (/Users/rachit/Desktop/Apps/node-base/node_modules/mongoose/lib/helpers/promiseOrCallback.js:31:10)
 [Winston is Logging :  2022-03-12T09:41:20.959Z error: ReferenceError: accessLogStream is not defined
    at module.exports (/Users/rachit/Desktop/Apps/node-base/startup/routes.js:33:17)
    at Object.<anonymous> (/Users/rachit/Desktop/Apps/node-base/index.js:12:28)
    at Module._compile (node:internal/modules/cjs/loader:1101:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12)
    at node:internal/main/run_main_module:17:47
 [Winston is Logging :  2022-03-12T09:45:39.825Z error: /Users/rachit/Desktop/Apps/node-base/startup/routes.js:24
    path.join(__dirname, '../logs/access.log"),
                         ^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1031:15)
    at Module._compile (node:internal/modules/cjs/loader:1065:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/rachit/Desktop/Apps/node-base/index.js:12:1)
    at Module._compile (node:internal/modules/cjs/loader:1101:14)
